--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <a href="#">Ver Mapa-Mundi</a>
             </article>
         </section>
+        <div id="rodape">Copyright &copy; ExploreTheWorld.com</div>
     
 </body>
 </html>
